# rssn

./: .gitignore  .missdoc.tmp.kate-swp  ARCHITECTURE.md  ATTRIBUTIONS.md  CITATION.cff  CNAME  CODESTASTICS.md  CODE_OF_CONDUCT.md  CODE_STASTICS.md  CONTRIBUTING.md  Cargo.toml  PDE_PROGRESS.md  README.md  SECURITY.md  TECHNICAL_DEBT.md  TECHNICAL_DEBT_FIX_SUMMARY.md  build.rs  build_all.bat  build_all.sh  build_output.txt  calculus.rs  cbindgen.toml  changes.patch  clippy.toml  collect_binaries.bat  collect_binaries.sh  doc-header.html  kani.toml  needs.txt  perf.data.old  poc1.py  poc2.py  poc3.py  pre-commit.bat  pre-commit.sh  prelude.rs  release_cpu_targets_linux.sh  repro_test.rs  rssn.h  rssn.hpp  (+5 more)
.cargo/: config.toml
.gitea/workflows/: ci.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml
benches/: compute_cache.rs  compute_computable.rs  compute_computation.rs  compute_engine.rs  compute_state.rs  constant.rs  lib.rs  lib_bench.rs  numerical_vector.rs  prelude.rs  prelude_bench.rs  rssn_benches.rs  symbolic_elementary.rs  symbolic_matrix.rs  symbolic_polynomial.rs  symbolic_simplify_dag.rs
benches/ffi_apis/: ffi_api.rs  mod.rs
benches/ffi_blindings/: mod.rs
docs/: ast_to_dag_migration.md  ast_to_dag_phase1_complete.md  ast_to_dag_phase2_complete.md  documentation_and_simplify_enhancements.md  ffi_strategy.md  ffi_three_version_complete.md  list_variants_refactoring.md  progress_report.md  tasks_20251119-20260129.md
examples/: calculus_demo.rs  debug_integration.rs  debug_proof.rs  debug_singularity.rs  definite_integral_demo.rs  fdm_wave_2d_ripple.rs  fdm_wave_2d_surface.rs  fdm_wave_3d_ripple.rs  fem_structural_analysis.rs  finite_field_debug.rs  fluid_dynamics_karman_vortex.rs  fvm_advection_diffusion.rs  grobner_basis_demo_1.rs  grobner_basis_demo_2.rs  grobner_basis_demo_3.rs  indefinite_sum_numerical.rs  indefinite_sum_symbolic.rs  latex_output_demo.rs  lib_examples.rs  logic_debug.rs  matrix_demo.rs  number_theory_debug.rs  numerical_vector_demo.rs  numerical_vector_ffi_demo.cpp  numerical_vector_ffi_demo.f90  ode_lorenz_attractor.rs  ode_lorenz_attractor_1.rs  ode_solve.py  pde_heat_equation.rs  polynomial_demo.rs  quantum_tunneling_demo.rs  readme_demo.rs  relativity_black_hole_orbits.rs  repro_test.rs  rkm_adaptive_solver_comparison.rs  simplify_with_relations_demo.rs  solid_state_physics_demo.rs  statistical_ising_model.rs  symbolic_differentiation_modern.rs  symbolic_differentiation_poly.rs  (+3 more)
examples/fortran/: rssn.dll.lib
scripts/: again.py  check_prelude.sh  count_rs.py  dedupe.py  rename_prelude.py  scan.sh  update_vis.py
src/: .prelude.rs.kate-swp  constant.rs  ffi_api.rs  lib.rs  prelude.rs
src/compute/: cache.rs  computable.rs  computation.rs  engine.rs  mod.rs  state.rs
src/ffi_apis/: common.rs  compute_cache_ffi.rs  compute_state_ffi.rs  constant_ffi.rs  ffi_api.rs  macros.rs  mod.rs
src/ffi_blindings/: mod.rs
src/input/: mod.rs  parser.bak1  parser.rs
src/jit/: engine.rs  instructions.rs  mod.rs
src/nightly/: matrix.rs
src/numerical/: calculus.rs  calculus_of_variations.rs  combinatorics.rs  complex_analysis.rs  computer_graphics.rs  convergence.rs  coordinates.rs  differential_geometry.rs  elementary.rs  error_correction.rs  finite_field.rs  fractal_geometry_and_chaos.rs  functional_analysis.rs  geometric_algebra.rs  graph.rs  indefinite_sum.rs  integrate.rs  interpolate.rs  matrix.rs  mod.rs  multi_valued.rs  number_theory.rs  ode.rs  optimize.rs  pde.rs  physics.rs  physics_cfd.rs  physics_fea.rs  physics_md.rs  polynomial.rs  real_roots.rs  series.rs  signal.rs  solve.rs  sparse.rs  special.rs  stats.rs  tensor.rs  testing.rs  topology.rs  (+3 more)
src/output/: io.rs  latex.rs  mod.rs  plotting.rs  pretty_print.rs  typst.rs
src/physics/: mod.rs  physics_bem.rs  physics_cnm.rs  physics_em.rs  physics_fdm.rs  physics_fem.rs  physics_fvm.rs  physics_mm.rs  physics_mtm.rs  physics_rkm.rs  physics_sm.rs
src/plugins/: manager.rs  mod.rs  plugin_c  plugin_c.rs  stable_abi.rs
src/symbolic/: cad.rs  calculus - Copy.rs  calculus.rs  calculus_of_variations.rs  cas_foundations.rs  classical_mechanics.rs  combinatorics.rs  complex_analysis.rs  computer_graphics.rs  convergence.rs  coordinates.rs  core.rs  cryptography.rs  differential_geometry.rs  discrete_groups.rs  electromagnetism.rs  elementary.rs  error_correction.rs  error_correction_helper.rs  finite_field.rs  fractal_geometry_and_chaos.rs  functional_analysis.rs  geometric_algebra.rs  graph.rs  graph_algorithms.rs  graph_isomorphism_and_coloring.rs  graph_operations.rs  grobner.rs  group_theory.rs  handles.rs  integral_equations.rs  integration.rs  lie_groups_and_algebras.rs  logic.rs  matrix.rs  mod.rs  multi_valued.rs  number_theory.rs  numeric.rs  ode.rs  (+31 more)
tests/: compute_cache_test.rs  compute_computable_test.rs  compute_computation_test.rs  compute_engine_test.rs  compute_state_test.rs  constant_test.rs  dag_consistency_test.rs  debug_json_test.rs  debug_limit_test.rs  definite_integral_parsed_test.rs  ffi_constant_three_version_test.rs  input_parser_test.rs  lib.rs  lib_test.rs  mod.rs  numerical_calculus_ffi_test.rs  numerical_calculus_of_variations_ffi_test.rs  numerical_calculus_of_variations_test.rs  numerical_calculus_test.rs  numerical_combinatorics_ffi_test.rs  numerical_combinatorics_test.rs  numerical_complex_analysis_ffi_test.rs  numerical_complex_analysis_test.rs  numerical_computer_graphics_ffi_test.rs  numerical_computer_graphics_test.rs  numerical_convergence_ffi_test.rs  numerical_convergence_test.rs  numerical_coordinates_test.rs  numerical_differential_geometry_ffi_test.rs  numerical_differential_geometry_test.rs  numerical_elementary_test.rs  numerical_error_correction_ffi_test.rs  numerical_error_correction_test.rs  numerical_finite_field_test.rs  numerical_fractal_geometry_and_chaos_ffi_test.rs  numerical_fractal_geometry_and_chaos_test.rs  numerical_functional_analysis_ffi_test.rs  numerical_functional_analysis_test.rs  numerical_geometric_algebra_ffi_test.rs  numerical_geometric_algebra_test.rs  (+154 more)
(+555 files in other folders)
