[package]
name = "rssn"
version = "0.1.8"
edition = "2021"
authors = ["The rssn developers"]
description = "A comprehensive scientific computing library for Rust, aiming for feature parity with NumPy, SciPy, and SymPy."
license = "Apache-2.0"
repository = "https://github.com/Apich-Organization/rssn"
homepage = "https://github.com/Apich-Organization/rssn"
readme = "README.md"
keywords = [
    "scientific-computing",
    "symbolic-math",
    "numerical-analysis",
    "physics-simulation",
    "optimization",
]
categories = [
    "science",
    "mathematics",
    "data-structures",
    "simulation",
    "algorithms",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.dev]
lto = false
opt-level = 0
debug = true

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[dependencies]
libc = "0.2"
ndarray = { version = "0.16.1", features = ["serde"] }
statrs = "0.18.0"
argmin-math = { version = "0.5", features = [
    "ndarray_latest-nolinalg",
    "nalgebra_latest",
] }
argmin = { version = "0.11", features = [
	"serde", 
	"serde1"
] }
nalgebra = { version = "0.34", features = ["serde-serialize"] }
quadrature = "0.1.2"
interp = "2.1.1"
itertools = "0.14"
rustfft = "6.1.0"
sprs = "0.11.0"
uom = { version = "0.37.0", features = [
    "use_serde",
    "num-bigint",
    "std",
    "usize",
    "si",
] }
bigdecimal = { version = "0.4", features = ["serde"] }
special = "0.11.4"
errorfunctions = "0.2"
ndarray-npy = { version = "0.9", optional = true }
rayon = "1.8.1"
rand_v09 = { package = "rand", version = "0.9.2" } 
rand = "0.8.5"
ordered-float = "5.0.0"
num-complex = "0.4.4"
num-bigint = { version = "0.4", features = [
	"serde", 
	"rand"
] }
num-rational = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
libloading = { version = "0.8", optional = true }
dashmap = "6.1"
once_cell = "1.19"
lazy_static = "1.4.0"

plotters = { version = "0.3", features = [
    "image",
    "chrono",
    "ttf",
    "font-kit",
    "evcxr",
], optional = true }
ahash = { version = "0.8.12", features = ["serde"] }

[features]
default = []
output = ["plotters", "ndarray-npy"]
physics = []
plugins = ["libloading"]
ffi_api = []
#Will be avalible at v0.3.0 release.
ffi_blinding = []

full = [
    "output", 
    "physics", 
    "plugins", 
    "ffi_api", 
    "ffi_blinding",
]

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
proptest = "1.2"
assert_approx_eq = "1.1.0"

[[bench]]
name = "rssn_benches"
harness = false

[package.metadata.docs.rs]
all-features = true

[lints.clippy]
empty-line-after-doc-comments = "allow"
